--- a/web/src/app/components/big-number/_big-number-theme.scss
+++ b/web/src/app/components/big-number/_big-number-theme.scss
@@ -1,11 +1,11 @@
-@import "~@angular/material/theming";
+@use '~@angular/material' as mat;
 
 @mixin big-number-theme($theme) {
   $foreground: map-get($theme, "foreground");
 
   .big-number {
     .label {
-      color: mat-color($foreground, "secondary-text");
+      color: mat.get-color-from-palette($foreground, "secondary-text");
     }
   }
 }
@@ -13,13 +13,13 @@
 @mixin big-number-typography($config) {
   .big-number {
     .value {
-      font-size: mat-font-size($config, "headline");
-      font-weight: mat-font-weight($config, "display-1");
+      font-size: mat.font-size($config, "headline");
+      font-weight: mat.font-weight($config, "display-1");
     }
 
     .label {
-      font-size: mat-font-size($config, "caption");
-      font-weight: mat-font-weight($config, "body-2");
+      font-size: mat.font-size($config, "caption");
+      font-weight: mat.font-weight($config, "body-2");
     }
   }
 }
