--- a/web/src/app/pages/settings/_settings-theme.scss
+++ b/web/src/app/pages/settings/_settings-theme.scss
@@ -1,10 +1,10 @@
-@import "~@angular/material/theming";
+@use '~@angular/material' as mat;
 
 @mixin settings-typography($config) {
   .settings {
     .title {
-      font-size: mat-font-size($config, "subheading-2");
-      font-weight: mat-font-weight($config, "subheading-2");
+      font-size: mat.font-size($config, "subheading-2");
+      font-weight: mat.font-weight($config, "subheading-2");
     }
   }
 }
