--- a/web/src/app/components/channel-stats-chart/_channel-stats-chart-theme.scss
+++ b/web/src/app/components/channel-stats-chart/_channel-stats-chart-theme.scss
@@ -1,4 +1,4 @@
-@import "~@angular/material/theming";
+@use '~@angular/material' as mat;
 
 @mixin channel-stats-chart-theme($theme) {
   $background: map-get($theme, "background");
@@ -6,7 +6,7 @@
 
   .channel-stats-chart {
     .title {
-      color: mat-color($foreground, "secondary-text");
+      color: mat.get-color-from-palette($foreground, "secondary-text");
     }
   }
 }
