--- a/web/src/app/components/date-filter/_date-filter-theme.scss
+++ b/web/src/app/components/date-filter/_date-filter-theme.scss
@@ -1,14 +1,14 @@
-@import "~@angular/material/theming";
+@use '~@angular/material' as mat;
 
 @mixin date-filter-theme($theme) {
   $foreground: map-get($theme, "foreground");
   $background: map-get($theme, "background");
 
   .date-filter-overlay {
-    background-color: mat-color($background, "card");
+    background-color: mat.get-color-from-palette($background, "card");
   }
 
   .date-filter-arrow {
-    border-top-color: mat-color($foreground, "icon");
+    border-top-color: mat.get-color-from-palette($foreground, "icon");
   }
 }
