--- a/web/src/app/components/sub-menu/_sub-menu-theme.scss
+++ b/web/src/app/components/sub-menu/_sub-menu-theme.scss
@@ -1,11 +1,11 @@
-@import "~@angular/material/theming";
+@use '~@angular/material' as mat;
 
 @mixin sub-menu-theme($theme) {
   $foreground: map-get($theme, "foreground");
 
   .sub-menu {
     .extra {
-      color: mat-color($foreground, "secondary-text");
+      color: mat.get-color-from-palette($foreground, "secondary-text");
     }
   }
 }
@@ -13,13 +13,13 @@
 @mixin sub-menu-typography($config) {
   .sub-menu {
     .title {
-      font-size: mat-font-size($config, "subheading-2");
-      font-weight: mat-font-weight($config, "subheading-2");
+      font-size: mat.font-size($config, "subheading-2");
+      font-weight: mat.font-weight($config, "subheading-2");
     }
 
     .extra {
-      font-size: mat-font-size($config, "caption");
-      font-weight: mat-font-weight($config, "caption");
+      font-size: mat.font-size($config, "caption");
+      font-weight: mat.font-weight($config, "caption");
     }
   }
 }
