--- a/web/src/app/layout/header/_header-theme.scss
+++ b/web/src/app/layout/header/_header-theme.scss
@@ -1,11 +1,11 @@
-@import "~@angular/material/theming";
+@use '~@angular/material' as mat;
 
 @mixin header-theme($theme) {
   $foreground: map-get($theme, "foreground");
   $background: map-get($theme, "background");
 
   .header {
-    background-color: mat-color($background, "card");
-    border-bottom: solid 1px mat-color($foreground, "divider");
+    background-color: mat.get-color-from-palette($background, "card");
+    border-bottom: solid 1px mat.get-color-from-palette($foreground, "divider");
   }
 }
