--- a/web/src/app/layout/sidenav/_sidenav-theme.scss
+++ b/web/src/app/layout/sidenav/_sidenav-theme.scss
@@ -1,4 +1,4 @@
-@import "~@angular/material/theming";
+@use '~@angular/material' as mat;
 
 @mixin sidenav-theme($theme) {
   $is-dark-theme: map-get($theme, "is-dark");
@@ -6,25 +6,25 @@
 
   .sidenav {
     .copyright {
-      color: mat-color($foreground, "hint-text");
+      color: mat.get-color-from-palette($foreground, "hint-text");
     }
 
     .link {
-      color: mat-color($foreground, "secondary-text");
+      color: mat.get-color-from-palette($foreground, "secondary-text");
     }
 
     .list > a {
       color: if(
         $is-dark-theme,
-        map-get(mat-palette($mat-gray), 500),
-        map-get(mat-palette($mat-gray), 600)
+        map-get(mat.define-palette(mat.$gray-palette), 500),
+        map-get(mat.define-palette(mat.$gray-palette), 600)
       );
 
       &.active {
         color: if(
           $is-dark-theme,
-          map-get(mat-palette($mat-gray), 100),
-          map-get(mat-palette($mat-gray), 900)
+          map-get(mat.define-palette(mat.$gray-palette), 100),
+          map-get(mat.define-palette(mat.$gray-palette), 900)
         );
       }
     }
@@ -34,13 +34,13 @@
 @mixin sidenav-typography($config) {
   .sidenav {
     .info {
-      font-size: mat-font-size($config, "button");
-      font-weight: mat-font-weight($config, "button");
+      font-size: mat.font-size($config, "button");
+      font-weight: mat.font-weight($config, "button");
     }
 
     .copyright {
-      font-size: mat-font-size($config, "caption");
-      font-weight: mat-font-weight($config, "caption");
+      font-size: mat.font-size($config, "caption");
+      font-weight: mat.font-weight($config, "caption");
     }
   }
 }
