--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,34 +1,34 @@
-@import "~@angular/material/theming";
+@use '~@angular/material' as mat;
 
 @import "./theme";
 
-$config: mat-typography-config();
+$config: mat.define-typography-config();
 
 @include holostats-typography($config);
 
-$mat-light-theme-background: map-merge(
-  $mat-light-theme-background,
+$light-theme-background-palette: map-merge(
+  mat.$light-theme-background-palette,
   (
     card: white,
     background: #f9f9f9,
   )
 );
 
-$mat-dark-theme-background: map-merge(
-  $mat-dark-theme-background,
+$dark-theme-background-palette: map-merge(
+  mat.$dark-theme-background-palette,
   (
     card: #282828,
     background: #1f1f1f,
   )
 );
 
-$light-primary: mat-palette($mat-blue-gray);
-$light-accent: mat-palette($mat-blue-gray);
-$light-theme: mat-light-theme($light-primary, $light-accent);
+$light-primary: mat.define-palette(mat.$blue-gray-palette);
+$light-accent: mat.define-palette(mat.$blue-gray-palette);
+$light-theme: mat.define-light-theme($light-primary, $light-accent);
 
-$dark-primary: mat-palette($mat-blue-gray, 300);
-$dark-accent: mat-palette($mat-blue-gray, 300);
-$dark-theme: mat-dark-theme($dark-primary, $dark-accent);
+$dark-primary: mat.define-palette(mat.$blue-gray-palette, 300);
+$dark-accent: mat.define-palette(mat.$blue-gray-palette, 300);
+$dark-theme: mat.define-dark-theme($dark-primary, $dark-accent);
 
 @include holostats-theme($light-theme);
 
@@ -41,12 +41,18 @@ body {
   padding: 0;
   margin: 0;
 
-  background-color: mat-color(map-get($light-theme, background), card);
-  color: mat-color(map-get($light-theme, foreground), text);
+  background-color: mat.get-color-from-palette(
+    map-get($light-theme, background),
+    card
+  );
+  color: mat.get-color-from-palette(map-get($light-theme, foreground), text);
 
   &.dark {
-    background-color: mat-color(map-get($dark-theme, background), card);
-    color: mat-color(map-get($dark-theme, foreground), text);
+    background-color: mat.get-color-from-palette(
+      map-get($dark-theme, background),
+      card
+    );
+    color: mat.get-color-from-palette(map-get($dark-theme, foreground), text);
   }
 }
 
