style: run prettier

--- a/web/src/app/components/vtuber-filter/_vtuber-filter-theme.scss
+++ b/web/src/app/components/vtuber-filter/_vtuber-filter-theme.scss
@@ -6,7 +6,10 @@
 
   .vtuber-filter-row {
     .text {
-      background-color: mat.get-color-from-palette($background, "unselected-chip");
+      background-color: mat.get-color-from-palette(
+        $background,
+        "unselected-chip"
+      );
     }
 
     .more,
