fix(web): use mat.define-palette

--- a/web/src/styles/_constants.scss
+++ b/web/src/styles/_constants.scss
@@ -7,8 +7,8 @@ $hs-light-theme: map.deep-merge(
   mat.define-light-theme(
     (
       color: (
-        primary: mat.$blue-gray-palette,
-        accent: mat.$blue-gray-palette,
+        primary: mat.define-palette(mat.$blue-gray-palette),
+        accent: mat.define-palette(mat.$blue-gray-palette),
       ),
     )
   ),
