--- a/web/src/styles/modules/_loading.scss
+++ b/web/src/styles/modules/_loading.scss
@@ -1,9 +1,11 @@
 .shimmer {
   background: rgba(0, 0, 0, 0.1);
+  fill: rgba(0, 0, 0, 0.1);
   position: relative;
 
   .dark & {
     background: rgba(255, 255, 255, 0.1);
+    fill: rgba(255, 255, 255, 0.1);
   }
 }
 
