build(web): upgrade to angular 13

--- a/web/src/app/components/channel-table/_channel-table-theme.scss
+++ b/web/src/app/components/channel-table/_channel-table-theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @mixin channel-table-theme($theme) {
   $is-dark-theme: map-get($theme, "is-dark");
