--- a/web/src/styles/theme.scss
+++ b/web/src/styles/theme.scss
@@ -1,5 +1,5 @@
-@use '~@angular/material' as mat;
-@use '~@angular/cdk' as cdk;
+@use "@angular/material" as mat;
+@use "@angular/cdk" as cdk;
 
 // layout
 @import "src/app/layout/header/header-theme";
