--- a/web/src/styles/theme/_material.scss
+++ b/web/src/styles/theme/_material.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @mixin material-theme($theme) {
   @include mat.button-theme($theme);
