--- a/web/src/app/components/big-number/_big-number-theme.scss
+++ b/web/src/app/components/big-number/_big-number-theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @mixin big-number-theme($theme) {
   $foreground: map-get($theme, "foreground");
