--- a/web/src/app/components/channel-stats/_channel-stats-theme.scss
+++ b/web/src/app/components/channel-stats/_channel-stats-theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @mixin channel-stats-theme($theme) {
   $background: map-get($theme, "background");
