--- a/web/src/app/components/stream-item/_stream-item-theme.scss
+++ b/web/src/app/components/stream-item/_stream-item-theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @mixin stream-item-theme($theme) {
   $is-dark-theme: map-get($theme, "is-dark");
