--- a/web/src/app/components/stream-summary/_stream-summary-theme.scss
+++ b/web/src/app/components/stream-summary/_stream-summary-theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @mixin stream-summary-theme($theme) {
   $foreground: map-get($theme, "foreground");
