--- a/web/src/app/components/sub-menu/_sub-menu-theme.scss
+++ b/web/src/app/components/sub-menu/_sub-menu-theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @mixin sub-menu-theme($theme) {
   $foreground: map-get($theme, "foreground");
