--- a/web/src/app/pages/not-found/_not-found-theme.scss
+++ b/web/src/app/pages/not-found/_not-found-theme.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @mixin not-found-theme($theme) {
   $foreground: map-get($theme, "foreground");
