--- a/web/src/styles/theme.scss
+++ b/web/src/styles/theme.scss
@@ -17,6 +17,10 @@
 @import "src/app/components/channel-stats-chart/channel-stats-chart-theme";
 @import "src/app/components/vtuber-filter/vtuber-filter-theme";
 @import "src/app/components/stream-time/stream-time-theme";
+@import "src/app/components/live-chat/live-chat-theme";
+@import "src/app/components/popper/popper-theme";
+@import "src/app/components/chart-axis/chart-axis-theme";
+@import "src/app/components/stream-stats-chart/stream-stats-chart-theme";
 
 // pages
 @import "src/app/pages/not-found/not-found-theme";
@@ -47,6 +51,10 @@ mat.$theme-ignore-duplication-warnings: true;
   @include date-filter-theme($theme);
   @include vtuber-filter-theme($theme);
   @include stream-time-theme($theme);
+  @include live-chat-theme($theme);
+  @include chart-axis-theme($theme);
+  @include stream-stats-chart-theme($theme);
+  @include popper-theme($theme);
 }
 
 @mixin hs-typography($config) {
@@ -62,6 +70,10 @@ mat.$theme-ignore-duplication-warnings: true;
   @include apx-chart-typography($config);
   @include vtuber-filter-typography($config);
   @include stream-time-typography($config);
+  @include live-chat-typography($config);
+  @include chart-axis-typography($config);
+  @include stream-stats-chart-typography($config);
+  @include popper-typography($config);
 }
 
 @include hs-typography($hs-typography-config);
