feat(web): bring back commit id

--- a/web/src/app/layout/sidenav/sidenav.html
+++ b/web/src/app/layout/sidenav/sidenav.html
@@ -60,10 +60,10 @@
     </a>
     <a
       class="link"
-      href="https://github.com/PoiScript/HoloStats"
+      href="https://github.com/PoiScript/HoloStats/commit/{{ commitId }}"
       target="_blank"
     >
-      GitHub
+      Commit: {{ commitId }}
     </a>
   </div>
   <div class="copyright">&copy; 2019-2021 PoiScript</div>
