--- a/web/src/app/components/channel-table/channel-table.html
+++ b/web/src/app/components/channel-table/channel-table.html
@@ -13,7 +13,7 @@
     <td mat-cell *matCellDef="let row">
       <img
         class="profile"
-        [cfImage]="[row.vtuberId | image, 'thumbnail']"
+        [src]="row.vtuberId | image | cfImages:'88x88'"
         [routerLink]="['/vtuber', row.vtuberId]"
       />
     </td>
