--- a/web/src/app/components/stream-summary/stream-summary.html
+++ b/web/src/app/components/stream-summary/stream-summary.html
@@ -1,7 +1,10 @@
 <div class="stream-summary">
   <div class="cover">
     <a class="link">
-      <img class="img" src="{{ stream.thumbnailUrl }}?ngsw-bypass" />
+      <img
+        class="img"
+        [src]="(stream.cfImagesId | cfImages:'960x540') || stream.thumbnailUrl + '?ngsw-bypass'"
+      />
     </a>
   </div>
 
@@ -11,7 +14,10 @@
     </a>
 
     <a class="liver" [routerLink]="['/vtuber', stream.vtuberId]">
-      <img class="profile" [cfImage]="[stream.vtuberId | image, 'thumbnail']" />
+      <img
+        class="profile"
+        [src]="stream.vtuberId | image | cfImages:'88x88'"
+      />
       <span class="name">{{ stream.vtuberId | name }}</span>
     </a>
 
