--- a/web/src/app/components/vtuber-filter/vtuber-filter.html
+++ b/web/src/app/components/vtuber-filter/vtuber-filter.html
@@ -4,7 +4,7 @@
       class="profile"
       [style.zIndex]="10 - i"
       [matTooltip]="vtb | name"
-      [cfImage]="[vtb | image, 'thumbnail']"
+      [src]="vtb | image | cfImages:'88x88'"
       [ngClass]="{ off: i !== 0, selected: hasVTuber(vtb) }"
       (click)="onClick(vtb)"
     />
@@ -36,7 +36,7 @@
             *ngFor="let vtb of _vtubers | slice:6"
             [selected]="hasVTuber(vtb)"
           >
-            <img matListAvatar [cfImage]="[vtb | image, 'thumbnail']" />
+            <img matListAvatar [src]="vtb | image | cfImages:'88x88'" />
             {{vtb | name}}
           </mat-list-option>
         </mat-selection-list>
