--- a/web/src/app/components/popper/popper.scss
+++ b/web/src/app/components/popper/popper.scss
@@ -1,58 +1,57 @@
+@use "sass:math";
+
 .hs-popper {
+  position: absolute;
+  visibility: hidden;
+  pointer-events: none;
+  left: 0;
+  top: 0;
+}
+
+$arrow-size: 8px;
+
+.hs-popper-styled {
   display: block;
   user-select: none;
   border: none;
   color: white;
   border-radius: 4px;
   background: rgb(97, 97, 97);
-  pointer-events: none;
   padding-top: 6px;
   padding-bottom: 6px;
   padding-left: 8px;
   padding-right: 8px;
 
-  position: absolute;
-
-  &:not([data-popper-placement]) {
-    left: 0;
-    top: 0;
-    visibility: hidden;
-  }
-
-  &[data-popper-reference-hidden] {
-    visibility: hidden;
-    pointer-events: none;
-  }
-
-  &[data-popper-placement^="top"] .arrow {
-    bottom: -4px;
-  }
-
-  &[data-popper-placement^="bottom"] .arrow {
-    top: -4px;
-  }
-
-  &[data-popper-placement^="left"] .arrow {
-    right: -4px;
-  }
-
-  &[data-popper-placement^="right"] .arrow {
-    left: -4px;
-  }
-
   .arrow {
+    position: absolute;
+
     &,
     &::before {
-      width: 8px;
-      height: 8px;
+      width: $arrow-size;
+      height: $arrow-size;
       position: absolute;
-      z-index: -1;
     }
 
     &::before {
       content: "";
       transform: rotate(45deg);
       background-color: rgb(97, 97, 97);
+    }
+
+    &[data-placement^="top"] {
+      bottom: -#{math.div($arrow-size, 2)};
+    }
+
+    &[data-placement^="bottom"] {
+      top: -#{math.div($arrow-size, 2)};
+    }
+
+    &[data-placement^="left"] {
+      right: -#{math.div($arrow-size, 2)};
+    }
+
+    &[data-placement^="right"] {
+      left: -#{math.div($arrow-size, 2)};
     }
   }
 }
