feat(web): introduce paid live chat section

--- a/web/src/app/pages/streams-detail/streams-detail.html
+++ b/web/src/app/pages/streams-detail/streams-detail.html
@@ -19,4 +19,6 @@
 
     <hs-stream-stats-chart-shimmer></hs-stream-stats-chart-shimmer>
   </ng-template>
+
+  <hs-paid-chat-chart [stream]="{ streamId }"></hs-paid-chat-chart>
 </div>
