--- a/web/src/app/components/live-chat/live-chat.scss
+++ b/web/src/app/components/live-chat/live-chat.scss
@@ -21,7 +21,56 @@
     position: absolute;
   }
 
+  .line {
+    stroke-width: 1px;
+  }
+
   .label {
     user-select: none;
+    font-family: "Fira Code", monospace;
+  }
+
+  .y.label {
+    text-anchor: end;
+  }
+}
+
+.live-chat-popper {
+  position: absolute;
+
+  color: black;
+  border-radius: 4px;
+  background: rgb(255, 255, 255);
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 12px;
+  padding-right: 12px;
+
+  .title {
+    font-size: 11px;
+    color: #80868b;
+    padding-bottom: 4px;
+  }
+
+  .label {
+    color: #424242;
+    font-size: 13px;
+    line-height: 20px;
+  }
+
+  .count,
+  .amount {
+    font-size: 13px;
+    line-height: 20px;
+    text-align: right;
+  }
+
+  .count {
+    padding-left: 24px;
+  }
+
+  .hint {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 11px;
   }
 }
